--- a/compose.yml
+++ b/compose.yml
@@ -7,8 +7,9 @@ services:
       sh -c "python manage.py collectstatic --noinput && gunicorn asistencias.wsgi:application --bind 0.0.0.0:8000 --workers=3"
     volumes:
       - ./src:/app
-      - static_volume:/app/static
-      - media_volume:/app/media
+      - ./src/static:/app/static
+      - ./src/staticfiles:/app/staticfiles
+      - ./src/media:/app/media
     env_file:
       - .env
     depends_on:
@@ -23,8 +24,9 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - static_volume:/app/static
-      - media_volume:/app/media
+      - ./src/static:/app/static
+      - ./src/staticfiles:/app/staticfiles
+      - ./src/media:/app/media
     depends_on:
       - web
 
